--- a/options.conf
+++ b/options.conf
@@ -32,9 +32,9 @@ security_sensitive = false
 # do not run test suite
 skip_tests = true
 # add .so files to the lib package instead of dev
-so_to_lib = false
+so_to_lib = true
 # configure build for avx2
-use_avx2 = false
+use_avx2 = true
 # add clang flags
 use_clang = false
 # configure build for lto
