--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = blender
-url = http://download.blender.org/source/blender-2.79b.tar.gz
+url = https://download.blender.org/source/blender-2.79b.tar.gz
 archives = 
 giturl = 
 
@@ -21,10 +21,12 @@ broken_parallel_build = false
 compat = false
 # set conservative build flags
 conservative_flags = false
+# dev package requires the extras to be installed
+dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
 # optimize build for speed over size
-funroll-loops = true
+funroll-loops = false
 # set flags to smallest -02 flags possible
 insecure_build = false
 # do not remove static libraries
@@ -48,9 +50,9 @@ use_avx2 = true
 # configure build for avx512
 use_avx512 = false
 # add clang flags
-use_clang = false
+use_clang = true
 # configure build for lto
-use_lto = true
+use_lto = false
 # require package verification for build
 verify_required = false
 
