blender: Autospec creation for version 2.80

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = blender
-url = https://download.blender.org/source/blender-2.79b.tar.gz
+url = https://download.blender.org/source/blender-2.80.tar.gz
 archives = 
 giturl = 
 
