blender: Autospec creation for version 2.81

--- a/options.conf
+++ b/options.conf
@@ -1,8 +1,9 @@
 [package]
 name = blender
-url = https://download.blender.org/source/blender-2.80.tar.gz
+url = https://download.blender.org/source/blender-2.81.tar.xz
 archives = 
 giturl = 
+domain = 
 
 [autospec]
 # build 32 bit libraries
@@ -17,7 +18,7 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
-# this package is a library compatability package and only ships versioned library files
+# this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
 conservative_flags = true
@@ -26,13 +27,15 @@ dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
 # optimize build for speed over size
-funroll-loops = false
+funroll-loops = true
 # set flags to smallest -02 flags possible
 insecure_build = false
 # do not remove static libraries
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not generate debuginfo for this package
+nodebug = false
 # disable stripping binaries
 nostrip = false
 # optimize build for size over speed
@@ -50,7 +53,7 @@ use_avx2 = true
 # configure build for avx512
 use_avx512 = false
 # add clang flags
-use_clang = true
+use_clang = false
 # configure build for lto
 use_lto = false
 # require package verification for build
