--- a/options.conf
+++ b/options.conf
@@ -1,8 +1,8 @@
 [package]
 name = blender
-url = https://download.blender.org/source/blender-2.81.tar.xz
+url = https://download.blender.org/source/blender-2.91.2.tar.xz
 archives = 
-giturl = 
+giturl = https://github.com/blender/blender
 domain = 
 alias = 
 
