--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = blender
-url = https://download.blender.org/source/blender-2.93.0.tar.xz
+url = https://download.blender.org/source/blender-2.93.1.tar.xz
 archives = 
 giturl = https://github.com/blender/blender
 domain = 
@@ -52,13 +52,13 @@ skip_tests = true
 # add .so files to the lib package instead of dev
 so_to_lib = true
 # configure build for avx2
-use_avx2 = true
+use_avx2 = false
 # configure build for avx512
 use_avx512 = false
 # add clang flags
 use_clang = false
 # configure build for lto
-use_lto = false
+use_lto = true
 # require package verification for build
 verify_required = false
 
