--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = blender
-url = https://download.blender.org/source/blender-2.93.4.tar.xz
+url = https://download.blender.org/source/blender-2.93.5.tar.xz
 archives = 
 giturl = https://github.com/blender/blender
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = true
 # add .so files to the lib package instead of dev
