--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = blender
-url = https://download.blender.org/source/blender-2.93.5.tar.xz
+url = https://download.blender.org/source/blender-2.93.6.tar.xz
 archives = 
 giturl = https://github.com/blender/blender
 domain = 
@@ -54,7 +54,7 @@ skip_tests = true
 # add .so files to the lib package instead of dev
 so_to_lib = true
 # configure build for avx2
-use_avx2 = false
+use_avx2 = true
 # configure build for avx512
 use_avx512 = false
 # add clang flags
