--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = blender
-url = https://download.blender.org/source/blender-3.3.1.tar.xz
+url = https://download.blender.org/source/blender-3.6.1.tar.xz
 archives = 
 giturl = https://github.com/blender/blender
 domain = 
@@ -19,6 +19,8 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# create vendor archive with cargo
+cargo_vendor = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
