--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = blender
-url = https://download.blender.org/source/blender-3.6.4.tar.xz
+url = https://download.blender.org/source/blender-4.0.2.tar.xz
 archives = 
 giturl = https://github.com/blender/blender
 domain = 
@@ -59,6 +59,8 @@ server = false
 skip_tests = true
 # add .so files to the lib package instead of dev
 so_to_lib = true
+# configure build for apx
+use_apx = true
 # configure build for avx2
 use_avx2 = true
 # configure build for avx512
@@ -66,7 +68,7 @@ use_avx512 = false
 # add clang flags
 use_clang = false
 # configure build for lto
-use_lto = true
+use_lto = false
 # require package verification for build
 verify_required = false
 
