blender: Autospec creation for update from version 4.2.3 to version 4.3

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = blender
-url = https://download.blender.org/source/blender-4.2.3.tar.xz
+url = https://projects.blender.org/blender/blender/archive/blender-v4.3-release.tar.gz
 archives = 
 giturl = https://github.com/blender/blender
 domain = 
