blender: Autospec creation for version 4.3

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = blender
-url = https://projects.blender.org/blender/blender/archive/blender-v4.3-release.tar.gz
+url = http://localhost/cgit/projects/blender/snapshot/blender-4.3.tar.xz
 archives = 
 giturl = https://github.com/blender/blender
 domain = 
