blender: Autospec creation for update from version 4.3 to version v4.3.2

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = blender
-url = http://localhost/cgit/projects/blender/snapshot/blender-4.3.tar.xz
+url = https://projects.blender.org/blender/blender/archive/v4.3.2.tar.gz
 archives = 
 giturl = https://github.com/blender/blender
 domain = 
