--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = blender
-url = https://projects.blender.org/blender/blender/archive/v4.3.2.tar.gz
+url = https://download.blender.org/source/blender-4.4.3.tar.xz
 archives = 
 giturl = https://github.com/blender/blender
 domain = 
@@ -37,6 +37,8 @@ fast-math = false
 full-debug-info = false
 # optimize build for speed over size
 funroll-loops = true
+# require license subpackage for successful build
+has_license = true
 # set flags to smallest -02 flags possible
 insecure_build = false
 # do not remove static libraries
